# BaseCore

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
apps/api/: main.py
apps/api/core/: errors.py  modes.py  policy.py  providers.py  rewrite_loop.py  router.py  schemas.py  security.py  settings.py  telemetry.py  validator.py
apps/api/routes/: generate.py  health.py
apps/eval/: metrics.py  run_eval.py
apps/eval/cases/: adversarial.jsonl  regression.jsonl  smoke.jsonl
basecore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deployments/vllm/: MODEL.md  docker-compose.yml  start.sh
tests/: test_api.py  test_eval_metrics.py
